# Startup_Health_Chec

./: .env.example  .env.prod  .gitignore  DEPLOYMENT.md  EMAIL_NOTIFICATION_SETUP.md  PREVIEW_DEPLOYMENTS.md  README.md  SECURITY.md  TESTING.md  UAT_TEST_SCENARIOS.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: pr-cleanup.yml  pr-preview.yml
aws/: cloudformation-preview-shared.yml  cloudformation-template.yml  cloudwatch-dashboard.json  deploy-preview.sh  deploy.sh  ecs-task-definition.json  setup-monitoring.sh
backend/: .env.example  Dockerfile  Dockerfile.prod  SECURITY.md  pyproject.toml  pytest.ini
backend/app/: admin_models.py  admin_service.py  assessment_service.py  auth.py  database.py  email_service.py  email_validator.py  logging_config.py  main.py  middleware.py  models.py  pdf_service.py  questions_data.py  scheduler.py  security.py  statistics_service.py  validators.py
backend/config/: free_email_domains.txt
backend/templates/: digest.html
backend/tests/: test_api_endpoints.py  test_integration.py
deployment/: README.md
deployment/apache/: virtual-host-ssl.conf
deployment/systemd/: startup-health-check-backend.service
frontend/: .env.example  Dockerfile.prod  WCAG_COMPLIANCE.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/e2e/: accessibility.spec.ts  assessment-flow.spec.ts  performance.spec.ts
frontend/src/: AdminDashboard.tsx  App.tsx  analytics.ts  api.ts  brand.ts  emailValidator.ts  index.css  types.ts
(+5 files in other folders)
