[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.119.0"}
psycopg = {extras = ["binary"], version = "^3.2.11"}
pydantic-settings = "^2.11.0"
python-dotenv = "^1.1.1"
sqlalchemy = "^2.0.36"
weasyprint = "^66.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
