[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.119.0"}
psycopg = {extras = ["binary"], version = "^3.2.11"}
pydantic-settings = "^2.11.0"
python-dotenv = "^1.1.1"
sqlalchemy = "^2.0.36"
weasyprint = "^66.0"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
boto3 = "^1.40.55"
apscheduler = "^3.10.4"
jinja2 = "^3.1.2"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
httpx = "^0.28.1"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
